--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,32 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CS213_Project5">
         <activity
-            android:name=".DonutActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".DonutView"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".CoffeeView"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".OrderingView"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".BasketView"
+            android:exported="true">
         </activity>
     </application>
 
